# rust-api

./: .env  Cargo.toml  README.md
src/: main.rs
src/app/: mod.rs
src/config/: config.rs
src/guards/: jwt_guard.rs  mod.rs
src/models/: mod.rs
src/models/migration/: employee_migration.rs  follow_migration.rs  mod.rs  story_migration.rs
src/models/schema/: employee.rs  follow.rs  mod.rs  story.rs
src/modules/auth/: auth_controller.rs  auth_service.rs  mod.rs
