[package]
name = "social-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-service = "2.0"
actix-rt = "2.6"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.7"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "8.1"
bcrypt = "0.12"
uuid = "1.1"
dotenv = "0.15"
bson = "2.0"
chrono = { version = "0.4", features = ["serde"] }
warp = "0.3"
futures-util = "0.3.30"
log = "0.4"
